# rust-discord-record

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: main.yml
src/: discord.rs  encode.rs  lookback.rs  main.rs  receiver.rs  tts.rs
