[package]
name = "rust-discord-record"
version = "0.2.3"
authors = ["Frank <frank_spitulski@yahoo.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
audiopus = "0.3.0-rc.0"
byteorder = "1"
chrono = "0.4"
circular-queue = "0.2"
humantime = "2"
ogg = "0.9"
ord_by_key = "0.1"
#ogg-opus = "0.1" # embedded as encode.rs with modifications
rand = "0.8"
songbird = { version = "0.4", features = ["receive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }

[dependencies.serenity]
version = "0.12"
features = ["cache", "http", "client", "framework", "standard_framework", "voice", "rustls_backend"]

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"
